--- a/shaderlab/platform/msvc2008/projects/shaderlab.vcproj
+++ b/shaderlab/platform/msvc2008/projects/shaderlab.vcproj
@@ -357,6 +357,18 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="shape3"
+			>
+			<File
+				RelativePath="..\..\..\src\shaderlab\sl_shape3.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\shaderlab\sl_shape3.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath="..\..\..\src\shaderlab\sl_shader.c"
 			>
