--- a/glue/platform/msvc2008/projects/test.vcproj
+++ b/glue/platform/msvc2008/projects/test.vcproj
@@ -186,22 +186,6 @@
 			>
 		</File>
 		<File
-			RelativePath="..\..\..\sample\TestImage.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\sample\TestImage.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\sample\TestImage25.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\sample\TestImage25.h"
-			>
-		</File>
-		<File
 			RelativePath="..\..\..\sample\TestLighting.cpp"
 			>
 		</File>
@@ -223,6 +207,22 @@
 		</File>
 		<File
 			RelativePath="..\..\..\sample\TestShape.h"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\sample\TestSprite.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\sample\TestSprite.h"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\sample\TestSprite25.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\sample\TestSprite25.h"
 			>
 		</File>
 		<File
