[ADDED] pseudo3d cam
Former-commit-id: cf516f6da7a4db57c60f6141f9efafa3ecc29199

--- a/glue/platform/msvc2008/projects/glue.vcproj
+++ b/glue/platform/msvc2008/projects/glue.vcproj
@@ -156,14 +156,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\src\render\Camera.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\render\Camera.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\..\src\render\IShader.h"
 				>
 			</File>
@@ -191,6 +183,30 @@
 				RelativePath="..\..\..\src\render\ShaderMgr.h"
 				>
 			</File>
+			<Filter
+				Name="camera"
+				>
+				<File
+					RelativePath="..\..\..\src\render\Camera.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\render\OrthoCamera.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\render\OrthoCamera.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\render\Pseudo3DCamera.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\render\Pseudo3DCamera.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="math"
