--- a/glue/platform/msvc2008/projects/test.vcproj
+++ b/glue/platform/msvc2008/projects/test.vcproj
@@ -186,11 +186,11 @@
 			>
 		</File>
 		<File
-			RelativePath="..\..\..\sample\TestLighting.cpp"
+			RelativePath="..\..\..\sample\TestModel3.cpp"
 			>
 		</File>
 		<File
-			RelativePath="..\..\..\sample\TestLighting.h"
+			RelativePath="..\..\..\sample\TestModel3.h"
 			>
 		</File>
 		<File
