[ADDED] up sl, filter
Former-commit-id: 8393496a60be18f2dd185d3a60254397fe6dd2f3

--- a/shaderlab/platform/msvc2008/projects/shaderlab.vcproj
+++ b/shaderlab/platform/msvc2008/projects/shaderlab.vcproj
@@ -251,6 +251,98 @@
 			<Filter
 				Name="filter"
 				>
+				<File
+					RelativePath="..\..\..\src\shaderlab\shader\FilterProgram.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\shaderlab\shader\FilterProgram.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\shaderlab\shader\FilterShader.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\shaderlab\shader\FilterShader.h"
+					>
+				</File>
+				<Filter
+					Name="progs"
+					>
+					<File
+						RelativePath="..\..\..\src\shaderlab\shader\BlurProg.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\shaderlab\shader\BlurProg.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\shaderlab\shader\EdgeDetectProg.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\shaderlab\shader\EdgeDetectProg.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\shaderlab\shader\GaussianBlurProg.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\shaderlab\shader\GaussianBlurProg.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\shaderlab\shader\GrayProg.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\shaderlab\shader\GrayProg.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\shaderlab\shader\HeatHazeProg.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\shaderlab\shader\HeatHazeProg.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\shaderlab\shader\OutlineProg.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\shaderlab\shader\OutlineProg.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\shaderlab\shader\ReliefProg.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\shaderlab\shader\ReliefProg.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\shaderlab\shader\ShockWaveProg.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\shaderlab\shader\ShockWaveProg.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\shaderlab\shader\SwirlProg.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\shaderlab\shader\SwirlProg.h"
+						>
+					</File>
+				</Filter>
 			</Filter>
 			<Filter
 				Name="blend"
@@ -514,6 +606,122 @@
 						RelativePath="..\..\..\src\shaderlab\parser\VaryingNode.h"
 						>
 					</File>
+				</Filter>
+				<Filter
+					Name="filter"
+					>
+					<File
+						RelativePath="..\..\..\src\shaderlab\parser\Filter.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\shaderlab\parser\Filter.h"
+						>
+					</File>
+					<Filter
+						Name="blur"
+						>
+						<File
+							RelativePath="..\..\..\src\shaderlab\parser\blur.frag"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\shaderlab\parser\Blur.h"
+							>
+						</File>
+					</Filter>
+					<Filter
+						Name="edge_detect"
+						>
+						<File
+							RelativePath="..\..\..\src\shaderlab\parser\edge_detect.frag"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\shaderlab\parser\EdgeDetect.h"
+							>
+						</File>
+					</Filter>
+					<Filter
+						Name="gaussian_blur"
+						>
+						<File
+							RelativePath="..\..\..\src\shaderlab\parser\gaussian_blur.frag"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\shaderlab\parser\GaussianBlur.h"
+							>
+						</File>
+					</Filter>
+					<Filter
+						Name="gray"
+						>
+						<File
+							RelativePath="..\..\..\src\shaderlab\parser\Gray.h"
+							>
+						</File>
+					</Filter>
+					<Filter
+						Name="heat_haze"
+						>
+						<File
+							RelativePath="..\..\..\src\shaderlab\parser\heat_haze.frag"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\shaderlab\parser\HeatHaze.h"
+							>
+						</File>
+					</Filter>
+					<Filter
+						Name="outline"
+						>
+						<File
+							RelativePath="..\..\..\src\shaderlab\parser\outline.frag"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\shaderlab\parser\Outline.h"
+							>
+						</File>
+					</Filter>
+					<Filter
+						Name="relief"
+						>
+						<File
+							RelativePath="..\..\..\src\shaderlab\parser\relief.frag"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\shaderlab\parser\Relief.h"
+							>
+						</File>
+					</Filter>
+					<Filter
+						Name="shock_wave"
+						>
+						<File
+							RelativePath="..\..\..\src\shaderlab\parser\shock_wave.frag"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\shaderlab\parser\ShockWave.h"
+							>
+						</File>
+					</Filter>
+					<Filter
+						Name="swirl"
+						>
+						<File
+							RelativePath="..\..\..\src\shaderlab\parser\swirl.frag"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\shaderlab\parser\Swirl.h"
+							>
+						</File>
+					</Filter>
 				</Filter>
 			</Filter>
 			<Filter
