--- a/glue/platform/msvc2008/projects/test.vcproj
+++ b/glue/platform/msvc2008/projects/test.vcproj
@@ -42,7 +42,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\..\..\src;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\gl\include&quot;;&quot;..\..\..\..\editor-external\freeglut\include&quot;;..\..\..\..\shaderlab\src\shaderlab;..\..\..\..\rapidvg\src\rapidvg;..\..\..\..\sm\src\sm;..\..\..\..\model3\src\model3;..\..\..\..\ds\src\ds;..\..\..\..\ejoy2d\src"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;FREEGLUT_STATIC;GLEW_STATIC;USED_IN_EDITOR"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;FREEGLUT_STATIC;GLEW_STATIC"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -124,7 +124,7 @@
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
 				AdditionalIncludeDirectories="..\..\..\src;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\gl\include&quot;;&quot;..\..\..\..\editor-external\freeglut\include&quot;;..\..\..\..\shaderlab\src\shaderlab;..\..\..\..\rapidvg\src\rapidvg;..\..\..\..\sm\src\sm;..\..\..\..\model3\src\model3;..\..\..\..\ds\src\ds;..\..\..\..\ejoy2d\src"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;FREEGLUT_STATIC;GLEW_STATIC;USED_IN_EDITOR"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;FREEGLUT_STATIC;GLEW_STATIC"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
@@ -183,6 +183,14 @@
 	<Files>
 		<File
 			RelativePath="..\..\..\sample\main.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\sample\TestFilter.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\sample\TestFilter.h"
 			>
 		</File>
 		<File
