[CHANGED] use new sl
Former-commit-id: 64e10f4ad8419e257b3c89881aa5f46761b54ab9

--- a/shaderlab/platform/msvc2008/projects/shaderlab.vcproj
+++ b/shaderlab/platform/msvc2008/projects/shaderlab.vcproj
@@ -347,6 +347,14 @@
 			<Filter
 				Name="blend"
 				>
+				<File
+					RelativePath="..\..\..\src\shaderlab\shader\BlendShader.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\shaderlab\shader\BlendShader.h"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="model3"
@@ -422,6 +430,10 @@
 			</File>
 			<File
 				RelativePath="..\..\..\src\shaderlab\utility\StackAllocator.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\shaderlab\utility\typedef.h"
 				>
 			</File>
 		</Filter>
